Get walking around the map working.

--- a/resources/maps.yaml
+++ b/resources/maps.yaml
@@ -2,15 +2,29 @@ objset:
     - [0x00, 0x00, 0x00, 0x00]  # 0 None
     - [0x80, 0x80, 0x80, 0x80]  # 1 Cave
     - [0x81, 0x81, 0x81, 0x81]  # 2 Ground
-    - [0x90, 0x91, 0x92, 0x93]  # 3 Tree
-    - [0x94, 0x95, 0x96, 0x97]  # 4 Mountain
+    - [0x00, 0x00, 0x00, 0x00]  # 3
+    - [0x00, 0x00, 0x00, 0x00]  # 4
+    - [0x00, 0x00, 0x00, 0x00]  # 5
+    - [0x00, 0x00, 0x00, 0x00]  # 6
+    - [0x00, 0x00, 0x00, 0x00]  # 7
+    - [0x00, 0x00, 0x00, 0x00]  # 8
+    - [0x00, 0x00, 0x00, 0x00]  # 9
+    - [0x00, 0x00, 0x00, 0x00]  # a
+    - [0x00, 0x00, 0x00, 0x00]  # b
+    - [0x00, 0x00, 0x00, 0x00]  # c
+    - [0x00, 0x00, 0x00, 0x00]  # d
+    - [0x00, 0x00, 0x00, 0x00]  # e
+    - [0x00, 0x00, 0x00, 0x00]  # f
+
+    - [0x90, 0x91, 0x92, 0x93]  # 0x10 Tree
+    - [0x94, 0x95, 0x96, 0x97]  # 0x11 Mountain
 mapping:
     "o": 0x01  # Cave
     " ": 0x42  # Ground
-    "t": 0x43  # Green tree
-    "T": 0x83  # Brown tree
-    "m": 0x44  # Green mountain
-    "M": 0x84  # Brown mountain
+    "t": 0x50  # Green tree
+    "T": 0x90  # Brown tree
+    "m": 0x51  # Green mountain
+    "M": 0x91  # Brown mountain
 
 maps:
     - bank: 0
@@ -23,7 +37,7 @@ maps:
         0x0f, 0x00, 0x10, 0x30,
       ]
       sprpal: [
-        0x0f, 0x12, 0x16, 0x30,
+        0x0f, 0x17, 0x26, 0x12,
         0x0f, 0x37, 0x1a, 0x2a,
         0x0f, 0x37, 0x07, 0x17,
         0x0f, 0x00, 0x10, 0x30,
@@ -45,7 +59,7 @@ maps:
         - "mmmmm   mmmmmmmmmmmmmmmmmm   mmm"
         - "mmmmm   mmmmmmmmmmmmmmm        m"
         - "mmmmm   mmmmmmmmmmmmmm         m"
-        - "mmmmm   mmmmmmmmmm mm        t m"
+        - "mmmmm   mmmmmmmmmmmmm        t m"
         - "mmom    mmmmmmmmmmmm     T   t m"
         - "m       mmmmmmmmmmm          t m"
         - "m       mmmmmmmmmm             m"
