--- a/resources/sprites.yaml
+++ b/resources/sprites.yaml
@@ -70,3 +70,144 @@ tiles:
       colormap: [0x00000000, 0xff5e3000, 0xffffc6c6, 0xff1435de]
       filename: 'gfx/player.png'
 
+    - offset: 0x20
+      origin: [0, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/items1.png'
+    - offset: 0x24
+      origin: [16, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/items1.png'
+    - offset: 0x28
+      origin: [32, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/items1.png'
+    - offset: 0x2c
+      origin: [48, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/items1.png'
+
+
+
+    - offset: 0x7c
+      width: 2
+      height: 2
+      data:
+          - "       3        "
+          - " 3     3     3  "
+          - "  3    3    3   "
+          - "   3   3   3    "
+          - "    3  3  3     "
+          - "     3 3 3      "
+          - "      333       "
+          - "3333333333333333"
+          - "      333       "
+          - "     3 3 3      "
+          - "    3  3  3     "
+          - "   3   3   3    "
+          - "  3    3    3   "
+          - " 3     3     3  "
+          - "       3        "
+          - "       3        "
+
+    - offset: 0x78
+      width: 2
+      height: 2
+      data:
+          - "                "
+          - "                "
+          - "       3        "
+          - "   3   3   3    "
+          - "    3  3  3     "
+          - "     3 3 3      "
+          - "      333       "
+          - "  333333333333  "
+          - "      333       "
+          - "     3 3 3      "
+          - "    3  3  3     "
+          - "   3   3   3    "
+          - "       3        "
+          - "       3        "
+          - "                "
+          - "                "
+    - offset: 0x74
+      width: 2
+      height: 2
+      data:
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "       3        "
+          - "     3 3 3      "
+          - "      333       "
+          - "    33333333    "
+          - "      333       "
+          - "     3 3 3      "
+          - "       3        "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+
+    - offset: 0x70
+      width: 2
+      height: 2
+      data:
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "       3        "
+          - "       3        "
+          - "     33333      "
+          - "       3        "
+          - "       3        "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+          - "                "
+
+
+    - offset: 0x80
+      origin: [0, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/enemies1.png'
+    - offset: 0x84
+      origin: [16, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/enemies1.png'
+    - offset: 0x88
+      origin: [32, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/enemies1.png'
+    - offset: 0x8c
+      origin: [48, 0]
+      width: 2
+      height: 2
+      colormap: [0x0, 0xff000000, 0xff0000d9, 0xffffffff]
+      filename: 'gfx/enemies1.png'
+
+
+
+
+
+
