--- a/resources/Makefile
+++ b/resources/Makefile
@@ -3,7 +3,7 @@ include ../toolchain.mk
 .PHONY: clean 
 .PRECIOUS: *.o
 
-OUTS=level0.c level1.c bgtiles.h sprites.h
+OUTS=level0.c level1.c temple1.c bgtiles.h cchars.h sprites.h
 
 all: $(OUTS)
 
@@ -14,6 +14,13 @@ level0.c: maps.yaml
 level1.c: maps.yaml
 	python3 mklevels.py --bank 1 $< >$@
 	cp $@ ../levels
+
+temple1.c: temple1.yaml
+	python3 mklevels.py $< >$@
+	cp $@ ../levels
+
+cchars.h: tiles.yaml
+	python3 mktiles.py --range 0x00-0x1f $< >$@
 
 bgtiles.h: tiles.yaml
 	python3 mktiles.py --range 0x80-0xff $< >$@
