Simple item pickups

--- a/resources/maps.yaml
+++ b/resources/maps.yaml
@@ -659,7 +659,7 @@ maps:
           - {'x':0, 'y':0, 'dmap': 0, 'dpos': 0x00}
           - {'x':0, 'y':0, 'dmap': 0, 'dpos': 0x00}
           - {'x':0, 'y':0, 'dmap': 0, 'dpos': 0x00}
-      spawns:
-          - {'x':0, 'y':0, 'id': 0}
+      items:
+          - {'x':16, 'y':5, 'id': 8}
 
 
