--- a/resources/temple1.yaml
+++ b/resources/temple1.yaml
@@ -94,7 +94,7 @@ maps:
         - "4 ......                /oooooo6"
         - "7888oo88888888888888888888888889"
       exits:
-          - {'x':0,'w':0,  'y':0, 'dmap': 0, 'dx':0, 'dy':0}
-      spawns:
-          - {'x':0, 'y':0, 'id':0}
+          - {'x':4,'w':2,  'y':26, 'dmap': 1, 'dx':8, 'dy':25}
+      items:
+          - {'x':10, 'y':10, 'id':9}
 
